fixed dates, made column link gap smaller

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -587,3 +587,9 @@ footer .theme-by {
     background-color: #9d9d9d;
     color: #d4d4d4; 
 }
+
+.list-link {
+    margin-bottom: 0;
+}
+
+
